--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-PORT= 8000
-MONGO_URI = mongodb+srv://ayub13228:your-password@cluster0.5saiaks.mongodb.net
+PORT=8000
+MONGO_URI=mongodb+srv://your-username:your-password@cluster0.5saiaks.mongodb.net
