--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=your-secret-access-token
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=your-secret-refresh-token
+REFRESH_TOKEN_EXPIRY=10d
 MONGO_URI=mongodb+srv://your-username:your-password@cluster0.5saiaks.mongodb.net
