--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=your-secret-refresh-token
 REFRESH_TOKEN_EXPIRY=10d
 MONGO_URI=mongodb+srv://your-username:your-password@cluster0.5saiaks.mongodb.net
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=cloud-api-key
+CLOUDINARY_API_SECRET=cloud-api-secret
